# Deep-Blue-C

./: CMakeLists.txt  README.md
Exercises/Calculator/: CMakeLists.txt  README.md
Exercises/Cinema/: CMakeLists.txt  README.md
Lesson 1/: README.md
Lesson 1 - Getting to know your environment/: README.md
Lesson_1/: Lesson_1.cpp  README.md
Lesson_2/: README.md
projects/: CMakeLists.txt  README.md
src/: Algorithms.cpp
